# gabuzando

./: .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html  styles.css
.cargo/: config.toml
public/text/about/: contact.json  countries.json  me.json  random_quote.json  why_gabuzando.json
public/text/blog/: posts.json
public/text/cv/: additional_info.json  education.json  experience.json  skills.json
public/text/home/: greetings.json
public/text/projects/: projects.json
src/: about.rs  blog.rs  cv.rs  footer.rs  header.rs  home.rs  hooks.rs  main.rs  not_found.rs  projects.rs  types.rs  utils.rs  window.rs  window_manager.rs
src/components/: bongo_cat.rs  content_loader.rs  footer.rs  header.rs  language_context.rs  loading.rs  mod.rs  window.rs  window_manager.rs
src/pages/: about.rs  blog.rs  cv.rs  extra.rs  home.rs  mod.rs  not_found.rs  projects.rs
