[package]
name = "gabuzando"
version = "0.1.0"
edition = "2024"


[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.28"
web-sys = { version = "0.3.78", features = ["Window", "Document", "Element", "HtmlElement", "Node", "Storage"] }
yew = { version = "0.21.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
gloo-timers = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
gloo-events = "0.2"
